--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="textfield_width">200dp</dimen>
     <dimen name="textfield_height">60dp</dimen>
 
+    <dimen name="small_card_width">120dp</dimen>
+    <dimen name="small_card_height">160dp</dimen>
+
     </resources>
