--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,12 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.valour.irisexchange.app.DashboardFragment">
+    tools:context="me.valour.irisexchange.app.DashboardFragment"
+    android:orientation="vertical">
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="8"
         android:id="@+id/dashboardGrid"
         android:layout_gravity="left|top"
         android:columnWidth="@dimen/small_card_width"
@@ -16,4 +18,11 @@
         android:stretchMode="columnWidth"
         android:gravity="center" />
 
-</FrameLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2">
+        <Button android:id="@+id/btn_settings" />
+        </GridLayout>
+
+</LinearLayout>
