--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.valour.irisexchange.app.DashboardFragment"
+    tools:context="me.valour.irisexchange.app.fragments.DashboardFragment"
     android:orientation="vertical">
 
     <GridView
