--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.valour.irisexchange.app.LoginFragment">
+    tools:context="me.valour.irisexchange.app.fragments.LoginFragment">
 
     <EditText android:id="@+id/login_username"
               android:layout_width="wrap_content"
