--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.valour.irisexchange.app.RegisterFragment">
+    tools:context="me.valour.irisexchange.app.fragments.RegisterFragment">
 
 
     <EditText android:id="@+id/reg_username"
